@startuml

entity USERS {
    * id : int (PK)
    --
    full_name : string
    email : string (UNIQUE)
    hashed_password : string
    created_at : datetime (immutable)
    updated_at : datetime
}

entity RESUMES {
    * id : int (PK)
    --
    user_id : int (FK)
    file_path : string
    parsed_text : text  // Initial parsed text from resume (Original)
    optimized_text : text // AI-enhanced resume (Optimized)
    is_ai_generated : boolean // ✅ True if AI optimized resume
    is_user_approved : boolean // ✅ True if user approves AI resume
    ats_score_initial : float // ✅ ATS score before optimization
    ats_score_final : float // ✅ ATS score after AI optimization
    created_at : datetime (immutable)
    updated_at : datetime
}

entity JOBS {
    * id : int (PK)
    --
    user_id : int (FK) // ✅ Tracks who posted the job
    job_title : string
    job_description : text
    company_name : string
    extracted_skills : text // ✅ Skills extracted from JD
    job_url : string
    created_at : datetime (immutable)
    updated_at : datetime
}

entity JOB_MATCHES {
    * id : int (PK)
    --
    user_id : int (FK)
    job_id : int (FK)
    resume_id : int (FK)
    match_score_initial : float // ✅ Score before AI optimization
    match_score_final : float // ✅ Score after AI optimization
    ats_score_initial : float // ✅ ATS score before optimization (tracked per job)
    ats_score_final : float // ✅ ATS score after optimization (tracked per job)
    matched_skills : text // ✅ Skills found in resume
    missing_skills : text // ✅ Skills missing in resume
    calculated_at : datetime
}

entity APPLICATIONS {
    * id : int (PK)
    --
    user_id : int (FK)
    job_id : int (FK)
    resume_id : int (FK)
    application_url : string
    application_status : string // ✅ ("Not Applied", "In Progress", "Rejected", "Offered")
    applied_date : datetime
    updated_at : datetime
}

USERS ||--|{ RESUMES : uploads
USERS ||--|{ JOBS : posts
USERS ||--|{ JOB_MATCHES : generates
USERS ||--|{ APPLICATIONS : submits
JOBS ||--|{ JOB_MATCHES : relates
RESUMES ||--|{ JOB_MATCHES : used_for
JOBS ||--|{ APPLICATIONS : tracks

@enduml